--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 </head>
 <body>
     <div class="contenedor">
-        <h1>¿Quieres ser mi novia 😱😍💘?</h1>
+        <h1>¿Quieres ser mi novia 😍💘?</h1>
     
         <div class="botones" id="botones">
           <button class="si" onclick="aceptar()">Sí 💖</button>
