--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
   <title>¿Quieres ser mi novia?</title>
   <link rel="stylesheet" href="style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -10,17 +12,17 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body class="bg-light">
-  <div class="contenedor d-flex flex-column justify-content-center align-items-center mt-5">
-    <h1 class="text-center text-primary">¿Quieres ser mi novia? 😍💘</h1>
+  <div class="contenedor d-flex flex-column justify-content-center align-items-center min-vh-100">
+    <h1 class="text-center text-primary  display-4">¿Quieres ser mi novia? 😍💘</h1>
     
     <div class="botones text-center mt-4" id="botones">
-      <button class="btn btn-success" onclick="aceptar()">Sí 💖</button>
-      <button class="btn btn-danger" id="noBtn" onclick="moverNo(this)">No 😅</button>
+      <button class="btn btn-success btn-lg px-4 me-2" onclick="aceptar()">Sí 💖</button>
+      <button class="btn btn-danger btn-lg px-4 mt-2 mt-md-0" id="noBtn" onclick="moverNo(this)">No 😅</button>
     </div>
 
-    <div id="mensaje" class="mt-5" style="display:none;">
+    <div id="mensaje" class="mt-5 text-center" style="display:none;">
       <p class="text-success fs-4">¡Felicidades! Ya somos novios 💕🥳</p>
-      <div class="d-flex justify-content-center">
+      <div class="d-flex justify-content-center flex-wrap">
         <div class="emoji">🎉</div>
         <div class="emoji">💃</div>
         <div class="emoji">🎊</div>
