--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     
     <div class="botones text-center mt-4" id="botones">
       <button class="btn btn-success btn-lg px-4 me-2" onclick="aceptar()">Sí 💖</button>
-      <button class="btn btn-danger btn-lg px-4 mt-2 mt-md-0" id="noBtn" onclick="moverNo(this)">No 😅</button>
+      <button class="btn btn-danger btn-lg px-4 mt-2" id="noBtn" onclick="moverNo(this)">No 😅</button>
     </div>
 
     <div id="mensaje" class="mt-5 text-center" style="display:none;">
