--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <div class="contenedor d-flex flex-column justify-content-center align-items-center min-vh-100">
     <h1 class="text-center text-primary  display-4">¿Quieres ser mi novia? 😍💘</h1>
     
-    <div class="botones text-center mt-4" id="botones">
+    <div class="botones text-center" id="botones">
       <button class="btn btn-success btn-lg px-4 me-2" onclick="aceptar()">Sí 💖</button>
       <button class="btn btn-danger btn-lg px-4 mt-2" id="noBtn" onclick="moverNo(this)">No 😅</button>
     </div>
