--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <h1 class="text-center text-primary  display-4">¿Quieres ser mi novia? 😍💘</h1>
     
     <div class="botones text-center" id="botones">
-      <button class="btn btn-success btn-lg px-4 me-2" onclick="aceptar()">Sí 💖</button>
-      <button class="btn btn-danger btn-lg px-4 mt-2" id="noBtn" onclick="moverNo(this)">No 😅</button>
+      <button class="btn btn-success " onclick="aceptar()">Sí 💖</button>
+      <button class="btn btn-danger " id="noBtn" onclick="moverNo(this)">No 😅</button>
     </div>
 
     <div id="mensaje" class="mt-5 text-center" style="display:none;">
