--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 </head>
 <body class="bg-light">
   <div class="contenedor d-flex flex-column justify-content-center align-items-center min-vh-100">
+    <div style="height:1px;">
     <h1 class="text-center text-primary  display-4">¿Quieres ser mi novia? 😍💘</h1>
     
     <div class="botones text-center" id="botones">
@@ -31,6 +32,7 @@
       </div>
     </div>
   </div>
+</div>
 
   <!-- Incluir jQuery y Bootstrap JS desde CDN -->
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
