--- a/index.html
+++ b/index.html
@@ -55,5 +55,24 @@
       btn.style.top = randomY + "px";
     }
   </script>
+  <!-- justo antes de cerrar </body> -->
+<script src="https://unpkg.com/pulltorefreshjs@0.1.16/dist/index.umd.js"></script>
+<script>
+  PullToRefresh.init({
+    mainElement: 'body',
+    onRefresh() { window.location.reload(); }
+  });
+</script>
+  <script>
+    // Cambiar el color de fondo al hacer clic en el botón "Sí"
+    document.querySelector('.btn-success').addEventListener('click', function() {
+      document.body.style.backgroundColor = '#ffeb3b'; // Cambia a un color amarillo claro
+    });
+
+    // Cambiar el color de fondo al hacer clic en el botón "No"
+    document.querySelector('.btn-danger').addEventListener('click', function() {
+      document.body.style.backgroundColor = '#f44336'; // Cambia a un color rojo claro
+    });
+  </script>
 </body>
 </html>
