--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
       <button class="btn btn-success  btn-lg" onclick="aceptar()">Sí 💖</button>
       <button class="btn btn-danger  btn-lg" id="noBtn" onclick="moverNo(this)">No 😅</button>
     </div>
+    <div>
+      <img src="img/declarandose" alt="">
+    </div>
 
     <div id="mensaje" class="mt-5 text-center" style="display:none;">
       <p class="text-success fs-4">¡Felicidades! Ya somos novios 💕🥳</p>
