--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <button class="btn btn-danger  btn-lg" id="noBtn" onclick="moverNo(this)">No 😅</button>
     </div>
     <div>
-      <img src="img/declarandose" alt="">
+      <img src="img/declarandose.jpg" alt="">
     </div>
 
     <div id="mensaje" class="mt-5 text-center" style="display:none;">
