--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
     <div class="botones text-center" id="botones">
       <button class="btn btn-success  btn-lg" onclick="aceptar()">Sí 💖</button>
       <button class="btn btn-danger  btn-lg" id="noBtn" onclick="moverNo(this)">No 😅</button>
+      <div>
+        <img src="img/declarandose.jpg" alt="">
+      </div>
     </div>
     <div>
       <img src="img/declarandose.jpg" alt="">
