--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     function aceptar() {
       // Ocultar los botones y mostrar el mensaje
       document.getElementById("botones").style.display = "none";
-      document.getElementById("titulo").style.display = "none";
+      document.querySelector("titulo").style.display = "none";
       document.querySelector("img").style.display = "none";
       document.getElementById("mensaje").style.display = "block";
 
